# licenta

proiect_licenta/: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  PROJECT_CONTEXT_v2.md  README.md  audit_med_vocab.py  benchmark.py  benchmark_doctor.py  benchmark_nurse.py  benchmark_triage_v2.py  benchmark_triage_v2_realistic.py  evaluate_doctor_full.py  full_benchmark.txt  pyproject.toml  report.md  result.txt
proiect_licenta/.claude/: launch.json  settings.local.json
proiect_licenta/benchmarks/: _metrics.py  benchmark_doctor.py  benchmark_doctor_disposition.py  benchmark_doctor_v3.py  benchmark_icd_resolution.py  benchmark_nurse.py  benchmark_nurse_v3.py  benchmark_pipeline_e2e.py  benchmark_tabular_full.py  benchmark_triage_v1.py  benchmark_triage_v2.py  benchmark_triage_v2_realistic.py  benchmark_triage_v3.py  build_title_embeddings.py  compare_all_versions.py  compare_backends.py  compare_case_generation.py  make_ch6_figures.py  make_diagrams.py  sweep_disposition_threshold.py  v3_base_results.txt  v3_nurse_results.txt
proiect_licenta/colab/: README.md  serve_medgemma_colab.ipynb
proiect_licenta/docs/: architecture.md  datasets.md  future-work.md  llm-backend.md
proiect_licenta/notebooks/: rebenchmark_v3_audit.ipynb  train_and_benchmark_v3.ipynb  train_doctor_disposition.ipynb  train_triage_v3.ipynb  tune_doctor_hpo_v3.ipynb  tune_optuna_v3.ipynb  tune_triage_v3.ipynb
proiect_licenta/scripts/: build_colab_notebook.py  build_colab_notebook_doctor_disposition.py  build_colab_notebook_triage_v3.py  build_history_index.py  build_optuna_doctor_notebook.py  (+5 more)
(+144 files in other folders)
