[project]
name = "proiect_licenta"
version = "0.1.0"
description = "proiect_licenta using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
]

[project.scripts]
proiect_licenta = "proiect_licenta.main:run"
run_crew = "proiect_licenta.main:run"
train = "proiect_licenta.main:train"
replay = "proiect_licenta.main:replay"
test = "proiect_licenta.main:test"
run_with_trigger = "proiect_licenta.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
