[project]
name = "proiect_licenta"
version = "0.1.0"
description = "proiect_licenta using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "thefuzz[speedup]>=0.22.0",
    "xgboost>=2.0.0",
]

[project.scripts]
proiect_licenta = "proiect_licenta.main:run"
run_crew = "proiect_licenta.main:run"
train_models = "proiect_licenta.main:train"
train_doctor = "proiect_licenta.main:train_doctor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
